updated how it works page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "socket.io-client": "^4.8.1",
-    "recharts": "^2.15.0"
+    "react-router-dom": "^7.9.6",
+    "recharts": "^2.15.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
