configured vercel to ignore backend

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "buildCommand": "cd frontend && pnpm install && pnpm build",
-  "installCommand": "pnpm install",
+  "installCommand": "cd frontend && pnpm install",
   "outputDirectory": "frontend/dist",
-  "framework": "vite",
-  "env": {
-    "VITE_BACKEND_URL": "@backend_url"
-  }
+  "ignoreCommand": "exit 0"
 }
 
