afixing vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd frontend && pnpm install && pnpm build",
-  "installCommand": "cd frontend && pnpm install",
-  "outputDirectory": "frontend/dist"
+  "buildCommand": "pnpm build",
+  "installCommand": "pnpm install",
+  "outputDirectory": "dist"
 }
